<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group >
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/home"
            android:title="主页" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="收藏夹" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/code"
            android:title="二维码" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="历史记录" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="设置" />
    </group>

    <item android:title="交流">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="关于我们" />
            <item
                android:id="@+id/menu_left_1"
                android:icon="@drawable/left_menu1"
                android:title="@string/left_menu_txt1" />
            <item
                android:id="@+id/menu_left_2"

                android:icon="@drawable/left_menu2"
                android:title="@string/left_menu_txt2" />
            <item
                android:id="@+id/menu_left_3"

                android:icon="@drawable/left_menu3"
                android:title="@string/left_menu_txt3" />
        </menu>
    </item>


</menu>