<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/headtoolbar"></include>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bg_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_gz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab4icon_xml"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/tab_mainpage_gz"
                android:textColor="@drawable/tab_fount_color"
                android:textSize="11sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_mainpage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab1icon_xml"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/tab_mainpage"
                android:textColor="@drawable/tab_fount_color"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@drawable/tab5icon_xml"
                android:onClick="onTabClicked"
                android:paddingBottom="2dp"
                android:paddingTop="7dp"
                android:scaleType="matrix"
                android:text="@string/tab_mainpage_me"
                android:textColor="@drawable/tab_fount_color"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
