<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableOverScrollDrag="true"
        app:srlEnableLoadMore="false"
        app:srlEnableRefresh="false"
        app:srlDragRate="0.75"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

    <include layout="@layout/layout_minehead"></include>

    <LinearLayout
        android:id="@+id/layout_unread"
        style="@style/my_info"
        android:background="@drawable/list_click_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp">

        <LinearLayout
            style="@style/work_info_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginLeft="9dp"
                android:src="@drawable/unread" />

            <TextView
                android:id="@+id/tv_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.9dp"
                android:layout_marginLeft="11dp"
                android:text="未读消息"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/arrow_right2" />


    </LinearLayout>

    <View
        style="@style/info_row_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/layout1"
        style="@style/my_info"
        android:background="@drawable/list_click_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp">

        <LinearLayout
            style="@style/work_info_left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginLeft="9dp"
                android:src="@drawable/setting" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.9dp"
                android:layout_marginLeft="11dp"
                android:text="@string/set1_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/arrow_right2" />


    </LinearLayout>

    <View
        style="@style/info_row_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />


    <LinearLayout
        android:id="@+id/layout2"
        style="@style/my_info"
        android:background="@drawable/list_click_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp">

        <LinearLayout
            style="@style/work_info_left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginLeft="9dp"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.9dp"
                android:layout_marginLeft="11dp"
                android:text="@string/set2_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/arrow_right2" />


    </LinearLayout>

    <View
        style="@style/info_row_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/layout3"
        style="@style/my_info"
        android:background="@drawable/list_click_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp">

        <LinearLayout
            style="@style/work_info_left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_marginLeft="9dp"
                android:src="@drawable/tuya" />

            <TextView
                android:id="@+id/imagesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.9dp"
                android:layout_marginLeft="11dp"
                android:text="秘密涂鸦"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/arrow_right2" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" >

        <Button
            android:visibility="gone"
            android:id="@+id/exit_btn"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:background="@drawable/mainradio_left"
            android:text="@string/set3_txt"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>